--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -27,16 +27,17 @@ jobs:
         # The value must indicate a particular version of the tool, or use 'latest'
         # to always provision the latest version
         cli: 1.10.1.693              # Clojure CLI based on tools.deps
-        lein: 2.9.1                  # Leiningen
+        #lein: 2.9.1                  # Leiningen
         boot: 2.8.3                  # Boot.clj
-        bb: 0.7.8                    # Babashka
-        clj-kondo: 2022.05.31        # Clj-kondo
-        cljfmt: 0.10.2               # cljfmt
-        cljstyle: 0.15.0             # cljstyle
+        #bb: 0.7.8                    # Babashka
+        #clj-kondo: 2022.05.31        # Clj-kondo
+        #cljfmt: 0.10.2               # cljfmt
+        #cljstyle: 0.15.0             # cljstyle
         cmd-exe-workaround: 'latest' # Replaces `clojure` with `deps.clj` on Windows
-        zprint: 1.2.3                # zprint
-            
-    - name: Install dependencies
-      run: lein deps
+        #zprint: 1.2.3                # zprint
+
     - name: Run tests
-      run: lein test
+      run: boot test
+
+    - name: build
+      run: boot build
