--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -38,6 +38,8 @@ jobs:
 
     #- name: Run tests
     #  run: boot test
+    - name: testInstall
+      run: ./scripts/build
 
     - name: build
       run: boot build
